<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.design.widget.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            android:minHeight="48dp">

            <!--main header content-->
            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_collapseMode="pin">

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="200dp"
                    android:alpha="0.06"
                    android:scaleType="centerCrop"
                    android:scaleX="2"
                    android:scaleY="2"
                    app:layout_collapseMode="parallax"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/back_pattern"/>

                <!--name of the user-->
                <TextView
                    android:id="@+id/name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/user_details_layout_margin"
                    android:layout_marginStart="@dimen/user_details_layout_margin"
                    android:layout_marginTop="16dp"
                    android:text="@string/sample_name"
                    android:textColor="@color/colorAccent"
                    android:textSize="32sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>

                <!--username-->
                <TextView
                    android:id="@+id/user_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="@string/sample_username"
                    android:textColor="@color/text_secondary"
                    app:layout_constraintStart_toStartOf="@+id/name"
                    app:layout_constraintTop_toBottomOf="@+id/name"/>

                <!--phone icon and text-->
                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="16dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    app:layout_constraintStart_toStartOf="@+id/user_name"
                    app:layout_constraintTop_toBottomOf="@+id/user_name"
                    app:srcCompat="@drawable/ic_phone"/>

                <!--phone number-->
                <TextView
                    android:id="@+id/phone_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginLeft="8dp"
                    android:text="@string/sample_phone_number"
                    android:textColor="@color/colorAccentLight"
                    android:textSize="@dimen/font_subheading"
                    app:layout_constraintBottom_toBottomOf="@+id/imageView"
                    app:layout_constraintStart_toEndOf="@+id/imageView"
                    app:layout_constraintTop_toTopOf="@+id/imageView"/>

                <!--email id icon and text-->
                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="16dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    app:layout_constraintStart_toStartOf="@+id/imageView"
                    app:layout_constraintTop_toBottomOf="@+id/imageView"
                    app:srcCompat="@drawable/ic_email"/>

                <!--email id-->
                <TextView
                    android:id="@+id/email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sample_email"
                    android:textColor="@color/colorAccentLight"
                    android:textSize="@dimen/font_subheading"
                    app:layout_constraintBottom_toBottomOf="@+id/imageView2"
                    app:layout_constraintStart_toStartOf="@+id/phone_number"
                    app:layout_constraintTop_toTopOf="@+id/imageView2"/>

                <!--title lessons-->
                <TextView
                    android:id="@+id/lessons_label"
                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/background_lessons"
                    android:gravity="center_vertical"
                    android:paddingLeft="24dp"
                    android:paddingRight="24dp"
                    android:text="@string/title_lessons"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/font_title"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/imageView2"/>

                <ImageView
                    android:id="@+id/filter_lessons"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:padding="8dp"
                    android:background="@drawable/back_filter_selector"
                    android:layout_marginRight="16dp"
                    android:layout_marginEnd="16dp"
                    app:layout_constraintEnd_toEndOf="@+id/lessons_label"
                    app:layout_constraintTop_toTopOf="@+id/lessons_label"
                    app:layout_constraintBottom_toBottomOf="@+id/lessons_label"
                    app:srcCompat="@drawable/ic_filter"
                    tools:layout_editor_absoluteY="163dp"/>

                <ProgressBar
                    android:id="@+id/details_progress_bar"
                    style="?android:attr/progressBarStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginTop="8dp"
                    app:layout_constraintBottom_toTopOf="@+id/lessons_label"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>

            </android.support.constraint.ConstraintLayout>

        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>

    <!--lesson recycler view-->
    <android.support.v7.widget.RecyclerView
        android:id="@+id/lesson_recycler"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout"
        tools:listitem="@layout/view_lesson"/>

</android.support.design.widget.CoordinatorLayout>